# download_oscar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_deploy.yml  cicd.yml  codeql-analysis.yml  dependency-review.yml  lint.yml  lint_build.yml  lint_build_deploy.yml  python-publish.yml
download_oc/: status.py
download_oscar/: __init__.py  dod.py  dod_gui.py
download_oscar/extensions/: checksum_extensions.py  data_extensions.py
