[metadata]
name = download_oscar
version = attr: download_oscar.__version__
description-file = README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PySimpleGUI
    beautifulsoup4
    html5lib
    requests
    tqdm

[options.extras_require]
dev =
    pre-commit
    autoflake
    flake8
    black
    build
    mypy
    isort
    pylint
    pytest
    pytest-cov
    wheel
    twine
    types-tqdm
    types-requests

[flake8]
max-line-length = 120
extend-ignore = E203
per-file-ignores = __init__.py:F401
