[metadata]
name = download_oscar
version = attr: download_oscar.__version__
description-file = README.md

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PySimpleGUI==4.60.4
    beautifulsoup4==4.11.1
    html5lib==1.1
    requests==2.28.2
    tqdm==4.64.1

[options.extras_require]
dev =
    pre-commit
    autoflake
    flake8
    black
    build
    mypy
    isort
    pylint
    pytest
    pytest-cov
    wheel
    twine
    types-tqdm
    types-requests
    types-beautifulsoup4

[flake8]
max-line-length = 120
extend-ignore = E203
per-file-ignores = __init__.py:F401
